--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
-<title>Pink Snake — Tail Green</title>
+<title>Snake Game</title>
 <style>
   :root {
     --bg: #071024;
